added a bunch of stuff

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,13 @@
-<ul class="main-navigation">
-  <li><a href="{{ root_url }}/">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
-</ul>
+<div class="bs-docs-sidenav affix navbar-container">
+	<img src="/images/me.png" style="width:100px;" />
+	<br />
+	<br />
+	<h4 style="color:gray;font-weight:lighter;">Timothy Ahong</h4>
+	<div class="page-header"></div>
+	<ul class="nav nav-list">
+	  <li><a href="{{ root_url }}/">Blog</a></li>
+	  <li><a href="{{ root_url }}/about.html">About</a></li>
+	  <li><a href="{{ root_url }}/projects/index.html">Projects</a></li>
+	</ul>
+	<div class="page-header"></div>
+</div>
