--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,9 @@
 <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+
+<link href="{{ root_url }}/stylesheets/bootstrap.min.css"rel="stylesheet" type="text/css">
+<link href="{{ root_url }}/stylesheets/bootstrap-responsive.min.css"rel="stylesheet" type="text/css">
+<link href="{{ root_url }}/stylesheets/my-styles.css"rel="stylesheet" type="text/css">
+
+<script src="{{ root_url }}/javascripts/bootstrap.min.js" type="text/javascript"></script>
