moved navbar to top

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,4 @@
-<div class="bs-docs-sidenav affix navbar-container">
+<!--<div class="bs-docs-sidenav affix navbar-container">
 	<img src="/images/me.png" style="width:100px;" />
 	<br />
 	<br />
@@ -10,4 +10,18 @@
 	  <li><a href="{{ root_url }}/projects/index.html">Projects</a></li>
 	</ul>
 	<div class="page-header"></div>
+</div>-->
+
+
+
+
+<div class="navbar">
+  <div class="navbar-inner">
+    <a class="brand" href="#">Timothy Ahong</a>
+    <ul class="nav">
+      <li><a href="{{ root_url }}/">Blog</a></li>
+	  <li><a href="{{ root_url }}/about.html">About</a></li>
+	  <li><a href="{{ root_url }}/projects/index.html">Projects</a></li>
+    </ul>
+  </div>
 </div>
