--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -18,10 +18,12 @@
 <div class="navbar">
   <div class="navbar-inner">
     <a class="brand" href="#">Timothy Ahong</a>
-    <ul class="nav">
-      <li><a href="{{ root_url }}/">Blog</a></li>
-	  <li><a href="{{ root_url }}/about.html">About</a></li>
-	  <li><a href="{{ root_url }}/projects/index.html">Projects</a></li>
-    </ul>
+    <div class="nav-container">
+    <div class="nav">
+      <li><a href="{{ root_url }}/">BLOG</a></li>
+	  <li><a href="{{ root_url }}/about.html">ABOUT</a></li>
+	  <li><a href="{{ root_url }}/projects/index.html">PROJECTS</a></li>
+    </div>
+</div>
   </div>
 </div>
