--- a/source/_layouts/custom_default.html
+++ b/source/_layouts/custom_default.html
@@ -1,6 +1,6 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
-  <body>
+  <body style="background:rgb(241, 240, 238);">
     {% include custom/navigation.html %}
     <div class="container">
           <div class="row span12 page-body">
