--- a/source/stylesheets/my-styles.css
+++ b/source/stylesheets/my-styles.css
@@ -36,40 +36,66 @@ li {
 /*NEW NAVBAR*/
 
 .navbar-inner {
-	background-color: #d5d5d5;
-	height: 60px;
-	line-height: 40px;
+	background-color: white;
+	height: 100px;
+	line-height: 50px;
 	/*override bootstrap defaults*/
 	background-image: none;
 	border: 0px;
 	-webkit-border-radius: 0px;
 	-moz-border-radius: 0px;
 	border-radius: 0px;
-	-webkit-box-shadow: 0;
-	-moz-box-shadow: 0;
-	box-shadow: 0;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+	text-align: center;
+	padding: 0px;
+	margin:	0px;
+}
+
+.nav-container {
+	margin: auto;
+	width: 70%;
 }
 
 .navbar .nav {
-	float: right;
-	margin-right: 50px;
-	margin-top: 7px;
+	position: static;
+	display: inline;
+	float: none;
+	width: 100%;
+}
+
+.navbar .nav>li {
+	line-height: 70px;
+	display: inline-block;
+	width: 33%;
 }
 
 .navbar .nav>li>a {
 	float: none;
-	color: #777;
+	color: #424242;
+	font-size: 15px;
+	font-weight: lighter;
 	text-decoration: none;
 	text-shadow: none;
 }
 
+.navbar .nav>li>a:hover {
+	color: #EEE;
+}
+
 .navbar .brand {
-text-shadow: none;
+	text-shadow: none;
+	color: #424242;
+	font-weight: 200;
+	padding-top: 20px;
+	position: absolute;
+	left: 20px;
 }
 
 /*PROJECT LISTING*/
 .project {
-	height: 169px;
+	height: 270px;
 	display: inline-block;
 	text-align: center;
 	color: white;
@@ -79,7 +105,7 @@ text-shadow: none;
 	padding: 0px;
 	line-height: 0px;
 }
-.project.wide-1 { width: 250px; }
+.project.wide-1 { width: 400px; }
 .project.wide-2 { width: 400px; }
 .project.wide-3 { width: 600px; }
 
@@ -93,7 +119,7 @@ text-shadow: none;
 .project.pink { background-color: rgb(224, 85, 158); }
 
 .project-text {
-	margin-top: 65px;
+	margin-top: 50px;
 	line-height: 20px;
 }
 
@@ -101,7 +127,7 @@ text-shadow: none;
 	z-index: 2;
 	margin-bottom: -200px;
 	position: relative;
-	top: -17px;
+	top: 0px;
 	-webkit-transition: opacity 0.2s ease-in-out;
 	-moz-transition: opacity 0.2s ease-in-out;
 	-ms-transition: opacity 0.2s ease-in-out;
