made the middle text body smaller, added coming soon for blog. changed the default page to the about page... its still a little sparse

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -13,15 +13,13 @@
 </div>-->
 
 
-
-
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="#">Timothy Ahong</a>
+    <p class="brand">Timothy Ahong</p>
     <div class="nav-container">
     <div class="nav">
-      <li><a href="{{ root_url }}/">BLOG</a></li>
-	  <li><a href="{{ root_url }}/about.html">ABOUT</a></li>
+      <li><a href="{{ root_url }}/blog.html">BLOG</a></li>
+	  <li><a href="{{ root_url }}/">ABOUT</a></li>
 	  <li><a href="{{ root_url }}/projects/index.html">PROJECTS</a></li>
     </div>
 </div>
