--- a/source/_layouts/custom_page.html
+++ b/source/_layouts/custom_page.html
@@ -6,9 +6,9 @@ layout: custom_default
 <article role="article">
   {% if page.title %}
   <header>
-    <h3 class="entry-title" style="color:gray;">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h3>
+    <h3 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h3>
     {% if page.date %}<p class="meta">{% include post/date.html %}{{ time }}</p>{% endif %}
-    {% if page.subtitle %}<p class="meta">{{ page.subtitle }}</p>{% endif %}
+    {% if page.subtitle %}<p class="meta entry-subtitle">{{ page.subtitle }}</p>{% endif %}
   </header>
   {% endif %}
   {{ content }}
