--- a/source/stylesheets/my-styles.css
+++ b/source/stylesheets/my-styles.css
@@ -15,9 +15,9 @@
 .self-pic {
 	display: block;
 	margin: auto;
-	width: 100px;
+	width: 130px;
 	padding-top: 20px;
-	padding-bottom: 35px;
+	padding-bottom: 10px;
 }
 
 .entry-title {
@@ -121,7 +121,7 @@ li {
 	font-weight: 200;
 	padding-top: 20px;
 	position: absolute;
-	left: 20px;
+	left: 24px;
 }
 
 /*PROJECT LISTING*/
@@ -181,3 +181,15 @@ li {
 .project-thumbnail-listing {
 	margin-left: 0px;
 }
+
+/*ABOUT PAGE*/
+.link-logo {
+	width: 50px;height: 50px;
+	margin: 5px;
+}
+
+.link-container {
+	text-align: center;
+	padding-bottom: 20px;
+}
+
