added github links and centered pages

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -18,7 +18,7 @@
     <a class="brand" href="{{ root_url }}/">Timothy Ahong</p>
     <div class="nav-container">
     <div class="nav">
-      <li><a href="{{ root_url }}/blog.html">BLOG</a></li>
+      <!--<li><a href="{{ root_url }}/blog.html">BLOG</a></li>-->
 	  <li><a href="{{ root_url }}/">ABOUT</a></li>
 	  <li><a href="{{ root_url }}/projects/index.html">PROJECTS</a></li>
     </div>
