--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -15,7 +15,7 @@
 
 <div class="navbar">
   <div class="navbar-inner">
-    <a class="brand" href="{{ root_url }}/">Timothy Ahong</p>
+    <a class="brand" href="{{ root_url }}/">TA</p>
     <div class="nav-container">
     <div class="nav">
       <!--<li><a href="{{ root_url }}/blog.html">BLOG</a></li>-->
