--- a/source/stylesheets/my-styles.css
+++ b/source/stylesheets/my-styles.css
@@ -6,7 +6,7 @@
 
 .text-body {
 	font-size: 18px;
-	font-family: "ApercuRegular", Helvetica, Helvetica Neue, Arial, sans-serif;
+	/*font-family: "ApercuRegular", Helvetica, Helvetica Neue, Arial, sans-serif;*/
 	text-align: justify;
 	line-height: 27px;
 	color: #202020;
@@ -33,35 +33,6 @@
 	text-align: center;
 	margin-bottom: 50px;
 }
-
-/*NAVBAR*/
-/*
-.navbar-container {
-	top:20px;
-	top:15%;
-	margin-left: 32px;
-	text-align: center;
-}
-
-.nav-list {
-	text-align: left;
-}
-
-.nav>li>a {
-	color:#818181;
-	padding: 0px;
-}
-
-.nav>li>a:hover {
-	color:#818181;
-	background-color:#FFFA92;
-}
-
-li {
-	line-height: 15px;
-	padding: 3px;
-}
-*/
 
 /*NEW NAVBAR*/
 
@@ -117,11 +88,16 @@ li {
 
 .navbar .brand {
 	text-shadow: none;
-	color: #424242;
-	font-weight: 200;
-	padding-top: 20px;
+	color: whitesmoke;
+	font-weight: bold;
+	padding-top: 25px;
 	position: absolute;
-	left: 24px;
+	left: 33px;
+	font-size: 60px;
+}
+
+.navbar {
+	margin-bottom: 0px;
 }
 
 /*PROJECT LISTING*/
@@ -168,10 +144,20 @@ li {
 .project-image:hover { opacity: 0; }
 
 
+.project-listing {
+	overflow: hidden;
+	white-space: nowrap;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
 /*PROJECT PAGE*/
 .project-thumbnail {
 	overflow: hidden;
 	text-align: center;
+	margin: 0px;
+	margin-bottom: -4px;
+	display: inline-block;
 }
 
 .page-header {
@@ -184,12 +170,84 @@ li {
 
 /*ABOUT PAGE*/
 .link-logo {
-	width: 50px;height: 50px;
+	width: 25px;height: 25px;
 	margin: 5px;
 }
 
 .link-container {
-	text-align: center;
-	padding-bottom: 20px;
+	text-align: left;
+	margin-top: -10px;
 }
 
+/*SUB HEADER*/
+.sub-header {
+	height: 100px;
+	width: 100%;
+	background-color: whitesmoke;
+	padding: 0px;
+	margin-bottom: 20px;
+}
+
+.sub-header-image {
+	display: inline-block;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	vertical-align: top;
+	width: 148px;
+}
+
+.sub-header-text {
+	height: 100%;
+	display: inline-block;
+	padding-left: 20px;
+}
+
+.sub-header-text .title-text {
+	display: inline-block;
+	font-weight: 200;
+}
+
+.sub-header-text .date-text {
+	display: inline-block;
+	font-weight: 100;
+}
+
+/*SECTIONS*/
+.section-header {
+	font-weight: 200;
+	font-size: 18px;
+	margin-bottom: 5px;
+	margin-top: 30px;
+	text-transform: uppercase;
+	color: rgb(150, 150, 150);
+}
+
+.article-break {
+	background-color: whitesmoke;
+	text-align: center;
+	width: 100%;
+	margin: 0px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	display: inline-block;
+}
+
+.third {
+	width: 33%;
+	min-width: 300px;
+}
+
+p, li {
+	font-weight: 200;
+}
+
+b {
+	font-weight: 500;
+}
+
+.single-image {
+	max-height: 100px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
